# lab

./: CMakeLists.txt  README.md  main.c
libs/: CMakeLists.txt
libs/algorithms/: 19_1.txt  19_10.1.txt  19_10.2.txt  19_2.txt  19_2_test.txt  19_3.txt  19_4.txt  19_6.txt  19_6_test.txt  19_7.txt  19_8.txt  19_8_test.txt  19_9.txt  19_9_test.txt  CMakeLists.txt  array.c  array.h  lab_19.c  lab_20.c  ordered_array.c  ordered_array.h  unordered_array.c  unordered_array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  matrix_16.c  matrix_16.h  test_for_matrix.c  tests_for_lab16.c
libs/data_structures/vector/: test_for_vector.c  test_for_voidVector.c  vector.c  vector.h  voidVector.c  voidVector.h
libs/exam/: CMakeLists.txt  exam.c  exam.h  test.c
libs/string_/: CMakeLists.txt  lab_18.c  string_.c  string_.h  tests_for_string_.c
