add_library(data_structures
        bitset/bitset
        vector/vector.c
        vector/voidVector.c
        add_library(data_structures
        matrix/matrix.c
        matrix/tests_for_matrix.c
        matrix/matrix_16.c
        matrix/tests_for_lab16.c
        matrix/matrix_16.c
        tests_for_string_.c
)

target_link_libraries(data_structures algorithms)
